# fastapi-boilerplate

./: README.md  deploy.sh  gunicorn_starter.sh  pyproject.toml  vercel.json
api/: index.py
src/: config.py
src/routers/: items.py
